# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: .hexlet-actions.yml.swp  hexlet-actions.yml
brain_games/: cli.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: BRAIN_GAMES.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  script_games.py
